[gd_scene load_steps=10 format=3 uid="uid://cfouypjed4j2a"]

[ext_resource type="Script" uid="uid://cues28wisxool" path="res://scripts/scam_profile.gd" id="1_ni2gc"]
[ext_resource type="Texture2D" uid="uid://nusbsdiyjuxg" path="res://assets/scamSwipe/scam_profile.png" id="1_yf3cj"]
[ext_resource type="Texture2D" uid="uid://d2thbwnq3iax4" path="res://assets/scamSwipe/scam_swipe_crossButton.png" id="2_y6yfg"]
[ext_resource type="Texture2D" uid="uid://dqwjneh5s4gbs" path="res://assets/scamSwipe/scam_swipe_likeButton.png" id="3_ni2gc"]
[ext_resource type="Texture2D" uid="uid://b3ir15bhfaqhj" path="res://assets/scamSwipe/warning_notif.png" id="5_dgdwq"]
[ext_resource type="Texture2D" uid="uid://cbbt3nr1velgx" path="res://assets/scamSwipe/next_button.png" id="6_dgdwq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dgdwq"]
atlas = ExtResource("2_y6yfg")
region = Rect2(27.5396, 1.09641, 148.46, 148.627)

[sub_resource type="AtlasTexture" id="AtlasTexture_qukqi"]
atlas = ExtResource("3_ni2gc")
region = Rect2(12.2654, 0.795315, 148.241, 150.705)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxt8v"]
atlas = ExtResource("6_dgdwq")
region = Rect2(0, 35.1409, 806.235, 423.859)

[node name="scam_profile" type="Node2D"]
script = ExtResource("1_ni2gc")

[node name="ScamProfile" type="Sprite2D" parent="."]
position = Vector2(1.08594, -1.64896)
scale = Vector2(0.196269, 0.19842)
texture = ExtResource("1_yf3cj")

[node name="cross_button" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="cross" type="TextureButton" parent="cross_button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0499992
anchor_top = -0.125
anchor_right = 0.0499992
anchor_bottom = -0.125
offset_left = -51.0
offset_top = 81.0
offset_right = 97.0
offset_bottom = 229.0
scale = Vector2(0.17, 0.17)
texture_normal = SubResource("AtlasTexture_dgdwq")
metadata/_edit_use_anchors_ = true

[node name="like_button" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="like" type="TextureButton" parent="like_button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = -0.15
anchor_right = 0.05
anchor_bottom = -0.15
offset_left = 24.0
offset_top = 81.0
offset_right = 172.0
offset_bottom = 231.0
scale = Vector2(0.17, 0.17)
texture_normal = SubResource("AtlasTexture_qukqi")
metadata/_edit_use_anchors_ = true

[node name="WarningNotif" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, -3)
scale = Vector2(0.463597, 0.463596)
texture = ExtResource("5_dgdwq")

[node name="next_button" type="Control" parent="WarningNotif"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="next" type="TextureButton" parent="WarningNotif/next_button"]
layout_mode = 0
offset_left = -38.8268
offset_top = 211.391
offset_right = 767.173
offset_bottom = 634.391
scale = Vector2(0.1, 0.1)
texture_normal = SubResource("AtlasTexture_sxt8v")
